--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,10 +1,8 @@
-# spring.jpa.open-in-view=false !>
-#para dev
-#Criar script no banco de dados automatico
-spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
-spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
-spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
+!Criar um arquivo create.sql para o banco postgres
+#spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+#spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/dsvendas
 spring.datasource.username=postgres
