--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,4 +9,5 @@ spring.jpa.open-in-view=false
 
 !spring.jpa.show-sql=true
 !spring.jpa.properties.hibernate.format_sql=true
-spring.profiles.active=test
+#spring.profiles.active=dev
+spring.profiles.active=${APP_PROFILE:test}
